# synergy-way-test-task

./: .env.exemple  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  celery_app.py  db.py  logging_config.py  main.py  models.py  schemas.py  settings.py
app/api/: routes_users.py
app/clients/: dummyjson.py
app/tasks/: __init__.py  addresses.py  credit_cards.py  users.py
app/templates/: ui.html
app/utils/: masking.py
deploy/aws/: ecs-task-api.json  ecs-task-beat.json  ecs-task-worker.json
tests/: conftest.py  test_api.py  test_mapping.py  test_tasks.py  test_upsert.py
