[project]
name = "synergy-way-test-task"
version = "0.1.0"
description = "FastAPI + Celery + Postgres + RabbitMQ periodic enrichment app"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "bewayos" }]

# Runtime deps
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.3",
  "SQLAlchemy>=2.0",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",
  "requests>=2.31",
  "celery>=5.3",
  "python-json-logger>=2.0",
  "jinja2>=3.1",
  "flower>=2.0"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "preserve"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --maxfail=1"
pythonpath = [" . "]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "responses>=0.25",
  "httpx>=0.27",
  "ruff>=0.4",
  "black>=24.3",
  "isort>=5.13",
  "pre-commit>=3.7",
  "flower>=2.0"
]